# FluidSimulator

./: .gitignore  CMakeLists.txt  FluidSim  FluidSim.cpp  README.md  glTest  imgui.ini
old/: FluidSim.cpp
output/: clearFiles  generateGif  recordAndProcess
src/: Shader.cpp  SimSource.cpp  SimSource.h  SimState.cpp  SimState.h  SimTimer.cpp  SimTools.cpp  SimTools.h  StateLoader.cpp  Window.cpp  Window.h  main.cpp
src/headers/: Shader.h  SimSource.h  SimState.h  SimTimer.h  StateLoader.h  Window.h
src/json/: default.json  fog.json  match.json  record.json
src/main/: mainGUI.cpp  mainRecord.cpp
src/shaders/: blackbody.fs  blackbodySmoke.fs  blank.fs  cursor.fs  density.fs  simpleVertex.vs  thermodens.fs  thermometer.fs
test/: callgrind.out.58583  callgrind.out.62927  callgrind.out.63230
test/valgrind/: callgrind.out.17703  callgrind.out.20539
